[gd_scene load_steps=12 format=2]

[ext_resource path="res://object/btn_sound/btn_sound.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/sprite2D/UI/icon_dhNT.png" type="Texture" id=2]
[ext_resource path="res://object/button/button_v2.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/sprite2D/UI/home_icon.png" type="Texture" id=4]
[ext_resource path="res://object/user_interface/user_interface.gd" type="Script" id=5]
[ext_resource path="res://asset/sprite2D/UI/tuorial_icon.png" type="Texture" id=6]
[ext_resource path="res://asset/sprite2D/UI/dialog_icon.png" type="Texture" id=7]
[ext_resource path="res://asset/sprite2D/UI/change_scene_btn.png" type="Texture" id=8]
[ext_resource path="res://asset/font/arial.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[node name="UserInterface" type="Node"]
script = ExtResource( 5 )

[node name="TopLeft" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="IconDHNT" type="TextureRect" parent="TopLeft"]
margin_left = 10.0
margin_top = 10.0
margin_right = 94.0
margin_bottom = 94.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="TopRight" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopRight"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = 50.0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 20
alignment = 2

[node name="BtnDialog" parent="TopRight/HBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_right = 37.0
texture_normal = ExtResource( 7 )
label_name = "Hộp thoại"

[node name="Tutorial" parent="TopRight/HBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 52.0
margin_right = 84.0
texture_normal = ExtResource( 6 )
label_name = "Hướng dẫn"

[node name="Home" parent="TopRight/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 104.0
margin_right = 148.0
texture_normal = ExtResource( 4 )
label_name = "Trang chủ"

[node name="Sound" parent="TopRight/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 168.0
margin_right = 204.0
margin_bottom = 40.0

[node name="BottomLeft" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0

[node name="BtnPrevScene" parent="BottomLeft" instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -80.0
margin_right = 85.0
margin_bottom = -16.0
mouse_default_cursor_shape = 0
texture_normal = ExtResource( 8 )
flip_h = true
__meta__ = {
"_editor_description_": ""
}

[node name="LabelName" parent="BottomLeft/BtnPrevScene" index="0"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 12.0
margin_top = -12.0
margin_right = 507.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "Prev"
align = 0
valign = 0
clip_text = true
uppercase = true

[node name="BottomRight" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0

[node name="BtnNextScene" parent="BottomRight" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -85.0
margin_top = -80.0
margin_right = -20.0
margin_bottom = -16.0
mouse_default_cursor_shape = 0
texture_normal = ExtResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="LabelName" parent="BottomRight/BtnNextScene" index="0"]
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = -486.0
margin_top = -11.0
margin_right = -20.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 2 )
text = "Next"
align = 2
valign = 0
clip_text = true
uppercase = true

[connection signal="button_up" from="TopRight/HBoxContainer/BtnDialog" to="." method="_on_BtnDialog_button_up"]
[connection signal="button_up" from="TopRight/HBoxContainer/Tutorial" to="." method="_on_Tutorial_button_up"]
[connection signal="button_up" from="TopRight/HBoxContainer/Home" to="." method="_on_Home_button_up"]
[connection signal="button_up" from="BottomLeft/BtnPrevScene" to="." method="_on_BtnPrevScene_button_up"]
[connection signal="button_up" from="BottomRight/BtnNextScene" to="." method="_on_BtnNextScene_button_up"]

[editable path="BottomLeft/BtnPrevScene"]
[editable path="BottomRight/BtnNextScene"]
